--- a/src/css/FileSystem.module.css
+++ b/src/css/FileSystem.module.css
@@ -1,9 +1,10 @@
 .app {
     height: 100%;
+    width: 100%;
   }
   
   .treeRoot {
-    max-height: 40%;
+    max-height: 70%;
     overflow: scroll;
     padding: 20px;
   }
